tests/ui/compile-fail/pin_data/tuple_struct_cfg_non_last.rs
use pin_init::*;

#[pin_data]
struct Tuple(#[cfg(any())] HiddenField, i32);

fn main() {}
